handle error 403 with swagger doc
